Thu Feb 08 19:18:36 2001  Angelo Corsaro  <corsaro@cs.wustl.edu>

	* bin/auto_run_tests.lst:

	  Removed comment from Exposed Policies test. The test has been fixed.

Thu Feb  8 14:11:36 2001  Darrell Brunsch <brunsch@uci.edu>

        * ace/ws2tcpip.h:  [Removed]

          I don't see any reason to have this file in ace; it is a system
          header file.  And from [Bug 722], our version is out of date anyway.

        * ace/OS.h:

          Changed to include system version of ws2tcpip.h

        * ace/Makefile.am:
        * ace/ace-dll.icc:
        * ace/ace_dll.dsp:
        * ace/ace_lib.dsp:

          Removed references to ws2tcpip.h.

        * ace/SOCK_Connect.cpp:

          Changed get_ip_interfaces to remove a memory error.  Thanks to 
          Viatcheslav Batenine <slavikb@infra2000.com> for helping out with
          this.

        * ace/SOCK_Dgram_Mcast.cpp:

          It looks like the change made on:

          Fri Jan 26 11:18:15 2001  Douglas C. Schmidt  ...

          doesn't work on Win32.  Reverted back to the old scheme for Win32
          only.

Thu Feb  8 00:34:57 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* include/makeinclude/platform_sunos5_g++.GNU: Added support for
	  -fno-exception when exceptions=0 is given to the Makefile.
  	  Thanks to Christian v. Mueffling <cvm@aiss.de> for reporting
 	  this.

Wed Feb  7 23:02:46 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/SUN_Proactor.cpp: Fixed the cancel_aiocb() method and added a
	  new overridden cancel_aio() method.  Thanks to Alexander Libman
 	  <Alibman@baltimore.com> for contributing this.

Thu Feb  8 02:09:05 2001  Pradeep Gore  <pradeep@cs.wustl.edu>

	* examples/QOS/Makefile:
	* examples/QOS/client.dsp:
	* examples/QOS/server.dsp:
	  Modified to use the ACE_QoS lib.
	* Receiver_QoS_Event_Handler.cpp:
	* Sender_QoS_Event_Handler.cpp:
	  Added missing Log_Msg.h for ACE_DEBUG.
	  Other files were modified to reflect changed directory location